// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete fail 1`] = `
Object {
  "Constructor": "ProjectDeletePage",
  "Options": Object {
    "ID": "component",
    "bodyText": [Function],
    "cancelDeleteProject": [Function],
    "containerSelector": "body",
    "dataLoaded": true,
    "dataSaving": true,
    "deleteProject": [Function],
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [],
    "project": Object {
      "cwd": "/tmp/",
      "id": 1,
      "name": "Test",
    },
    "types": Array [],
  },
  "html": "
<ul class=\\"breadcrumb\\">
  <li>
    <a href=\\"/\\"> Projects </a>
  </li>
  <li>
    <a href=\\"/\\">Test</a>
  </li>
  <!--if-->
  <!--if-->
  <li>Delete</li>
</ul>
<!--BreadCrumb-->
<!--breadcrumbs-->
<!--if-->
<!--ErrorsPanel-->
<div class=\\"modal\\">
  <div class=\\"content\\">
    <div class=\\"header\\">Delete project</div>
    <div class=\\"body\\">Do you want delete project \\"Test\\"?</div>
    <div class=\\"footer\\">
      <button class=\\"ok danger\\" disabled=\\"\\"><span>Confirm</span></button>
      <button class=\\"cancel\\"><span>Cancel</span></button>
    </div>
  </div>
</div>
<!--ConfirmModal-->
<!--if-->
<!--content-->
<!--if-->
<!--PageContent-->
",
}
`;

exports[`render errors 1`] = `
Object {
  "Constructor": "ProjectDeletePage",
  "Options": Object {
    "ID": "component",
    "bodyText": [Function],
    "cancelDeleteProject": [Function],
    "containerSelector": "body",
    "dataLoaded": true,
    "dataSaving": false,
    "deleteProject": [Function],
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [
      "Load project fail!",
    ],
    "project": Object {
      "chains": Array [],
    },
    "types": Array [],
  },
  "html": "
<ul class=\\"breadcrumb\\">
  <li>
    <a href=\\"/\\"> Projects </a>
  </li>
  <!--if-->
  <li></li>
</ul>
<!--BreadCrumb-->
<!--breadcrumbs-->
<ul class=\\"errors-panel\\">
  <li>Load project fail!</li>
</ul>
<!--if-->
<!--ErrorsPanel-->
<!--if-->
<!--content-->
<!--if-->
<!--PageContent-->
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Constructor": "ProjectDeletePage",
  "Options": Object {
    "ID": "component",
    "bodyText": [Function],
    "cancelDeleteProject": [Function],
    "containerSelector": "body",
    "dataLoaded": false,
    "dataSaving": false,
    "deleteProject": [Function],
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [],
    "project": Object {},
    "types": Array [],
  },
  "html": "
<ul class=\\"breadcrumb\\">
  <li>
    <a href=\\"/\\"> Projects </a>
  </li>
  <!--if-->
  <li></li>
</ul>
<!--BreadCrumb-->
<!--breadcrumbs-->
<!--if-->
<!--FlushPageDataLoading-->
<!--if-->
<!--PageContent-->
",
}
`;
